<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonMedia"
        android:layout_centerHorizontal="true"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonSelectFile"
        android:textSize="20sp"
        android:textColor="#219ac6"
        android:background="@drawable/button" />

    <ImageView
        android:id="@+id/pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/buttonMedia"
        android:layout_marginTop="20dp"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="20dp"
        android:contentDescription="@string/imageAddContent"
        android:src="@drawable/article" />  
        
    <TextView
        android:id="@+id/picPath"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/pic"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/pic"
        android:textColor="@color/seaBlue"
        android:textSize="15sp" />  
        
    <ImageView
        android:id="@+id/video"
        android:layout_alignLeft="@+id/pic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/pic"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/imageAddContent"
        android:src="@drawable/play" /> 
    
    <TextView
        android:id="@+id/videoPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/video"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/video"
        android:textColor="@color/seaBlue"
        android:textSize="15sp" />  
        
    <ImageView
        android:id="@+id/record"
        android:layout_alignLeft="@+id/pic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/video"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/imageAddContent"
        android:src="@drawable/play" /> 
        
    <TextView
        android:id="@+id/recordPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/record"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/record"
        android:textColor="@color/seaBlue"
        android:textSize="15sp" />  

    <Button
        android:id="@+id/buttonCancelMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:background="@drawable/button_add" />

    <Button
        android:id="@+id/buttonConfirmMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonCancelMedia"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_alignBottom="@+id/buttonCancelMedia"
        android:background="@drawable/button_add" />

    <TextView
        android:id="@+id/textViewCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/darkRed"
        android:textSize="20sp"
        android:layout_marginBottom="70dp"
        android:layout_marginRight="75dp"
        android:text="@string/buttonCancel" />

    <TextView
        android:id="@+id/textViewConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/darkRed"
        android:textSize="20sp"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="75dp"
        android:text="@string/buttonConfirm" />    

</RelativeLayout>  